feat: add edit form js

--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
         <button type="reset" class="popup__close"></button>
         <fieldset class="popup__edit-data">
           <legend class="popup__title">Редактировать профиль</legend>
-          <input type="text" class="popup__input-text popup__input-text-name" value="Жак-Ив Кусто" required>
-          <input type="text" class="popup__input-text popup__input-text-title" value="Исследователь океана" required>
+          <input type="text" class="popup__input-text popup__input-text-name" value="" required>
+          <input type="text" class="popup__input-text popup__input-text-title" value="" required>
         </fieldset>
         <button type="submit" class="popup__button-save">Сохранить</button>
     </form>
     </div>
+    <script src="./scripts/script.js"></script> 
 </body>
 </html>
