--- a/index.html
+++ b/index.html
@@ -28,42 +28,42 @@
                     <img class="cards__image" src="./images/cards-karachaevsk.png" alt="Карачаевск">
                     <div class="cards__rectangle">
                       <h2 class="cards__title">Карачаевск</h2>
-                      <button type="submit" class="cards__like"></button>
+                      <button type="button" class="cards__like"></button>
                     </div>
                 </li>
                 <li class="cards__item">
                     <img class="cards__image" src="./images/cards-elbrus.png" alt="Гора Эльбрус">
                     <div class="cards__rectangle">
                       <h2 class="cards__title">Гора Эльбрус</h2>
-                      <button type="submit" class="cards__like"></button>
+                      <button type="button" class="cards__like"></button>
                     </div>
                 </li>
                 <li class="cards__item">
                     <img class="cards__image" src="./images/cards-dombay.png" alt="Домбай">
                     <div class="cards__rectangle">
                       <h2 class="cards__title">Домбай</h2>
-                      <button type="submit" class="cards__like"></button>
+                      <button type="button" class="cards__like"></button>
                     </div>
                 </li>
                 <li class="cards__item">
                     <img class="cards__image" src="./images/cards-elbrus.png" alt="Гора Эльбрус">
                     <div class="cards__rectangle">
                       <h2 class="cards__title">Гора Эльбрус</h2>
-                      <button type="submit" class="cards__like"></button>
+                      <button type="button" class="cards__like"></button>
                     </div>
                 </li>
                 <li class="cards__item">
                     <img class="cards__image" src="./images/cards-dombay.png" alt="Домбай">
                     <div class="cards__rectangle">
                       <h2 class="cards__title">Домбай</h2>
-                      <button type="submit" class="cards__like"></button>
+                      <button type="button" class="cards__like"></button>
                     </div>
                 </li>
                 <li class="cards__item">
                     <img class="cards__image" src="./images/cards-karachaevsk.png" alt="Карачаево-Черкесия">
                     <div class="cards__rectangle">
                       <h2 class="cards__title">Карачаево-Черкесия</h2>
-                      <button type="submit" class="cards__like"></button>
+                      <button type="button" class="cards__like"></button>
                     </div>
                 </li>
             </ul>
@@ -73,15 +73,15 @@
         <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
     </footer>
     <div class="popup">
-      <form class="popup__container">
+      <div class="popup__container">
+      <form class="popup__form" name="profile-edit-form">
         <button type="reset" class="popup__close"></button>
-        <fieldset class="popup__edit-data">
-          <legend class="popup__title">Редактировать профиль</legend>
-          <input type="text" class="popup__input-text popup__input-text-name" value="" required>
-          <input type="text" class="popup__input-text popup__input-text-title" value="" required>
-        </fieldset>
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <input type="text" class="popup__input-text" value="" name="profile-edit-name" required>
+          <input type="text" class="popup__input-text" value="" name="profile-edit-title" required>
         <button type="submit" class="popup__button-save">Сохранить</button>
-    </form>
+        </form>
+      </div>
     </div>
     <script src="./scripts/script.js"></script> 
 </body>
