feat: cards from massive

--- a/index.html
+++ b/index.html
@@ -24,48 +24,6 @@
         </section>
         <section class="elements">
             <ul class="cards">
-                <li class="cards__item">
-                    <img class="cards__image" src="./images/cards-karachaevsk.png" alt="Карачаевск">
-                    <div class="cards__rectangle">
-                      <h2 class="cards__title">Карачаевск</h2>
-                      <button type="button" class="cards__like"></button>
-                    </div>
-                </li>
-                <li class="cards__item">
-                    <img class="cards__image" src="./images/cards-elbrus.png" alt="Гора Эльбрус">
-                    <div class="cards__rectangle">
-                      <h2 class="cards__title">Гора Эльбрус</h2>
-                      <button type="button" class="cards__like"></button>
-                    </div>
-                </li>
-                <li class="cards__item">
-                    <img class="cards__image" src="./images/cards-dombay.png" alt="Домбай">
-                    <div class="cards__rectangle">
-                      <h2 class="cards__title">Домбай</h2>
-                      <button type="button" class="cards__like"></button>
-                    </div>
-                </li>
-                <li class="cards__item">
-                    <img class="cards__image" src="./images/cards-elbrus.png" alt="Гора Эльбрус">
-                    <div class="cards__rectangle">
-                      <h2 class="cards__title">Гора Эльбрус</h2>
-                      <button type="button" class="cards__like"></button>
-                    </div>
-                </li>
-                <li class="cards__item">
-                    <img class="cards__image" src="./images/cards-dombay.png" alt="Домбай">
-                    <div class="cards__rectangle">
-                      <h2 class="cards__title">Домбай</h2>
-                      <button type="button" class="cards__like"></button>
-                    </div>
-                </li>
-                <li class="cards__item">
-                    <img class="cards__image" src="./images/cards-karachaevsk.png" alt="Карачаево-Черкесия">
-                    <div class="cards__rectangle">
-                      <h2 class="cards__title">Карачаево-Черкесия</h2>
-                      <button type="button" class="cards__like"></button>
-                    </div>
-                </li>
             </ul>
         </section>
     </main>
@@ -83,6 +41,15 @@
         </form>
       </div>
     </div>
+    <template id="cards-template">
+      <li class="cards__item">
+        <img class="cards__image" src="" alt="">
+        <div class="cards__rectangle">
+          <h2 class="cards__title"></h2>
+          <button type="button" class="cards__like"></button>
+        </div>
+      </li>
+    </template>
     <script src="./scripts/script.js"></script> 
 </body>
 </html>
