--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
         </form>
       </div>
     </div>
+    <div class="popup">
+      <div class="popup__container">
+      <form class="popup__form" name="profile-add-card-form">
+        <button type="reset" class="popup__close"></button>
+          <h2 class="popup__title">Новое место</h2>
+          <input type="text" class="popup__input-text" value="" name="card-img" placeholder="Название" required>
+          <input type="text" class="popup__input-text" value="" name="card-name" placeholder="Ссылка на картинку" required>
+        <button type="submit" class="popup__button-save">Создать</button>
+        </form>
+      </div>
+    </div>
     <template id="cards-template">
       <li class="cards__item">
         <img class="cards__image" src="" alt="">
