feat: adding card

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <form class="popup__form" name="profile-add-card-form">
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Новое место</h2>
-          <input type="text" class="popup__input-text" value="" name="card-img" placeholder="Название" required>
-          <input type="text" class="popup__input-text" value="" name="card-name" placeholder="Ссылка на картинку" required>
+          <input type="text" class="popup__input-text" value="" name="card-name" placeholder="Название" required>
+          <input type="text" class="popup__input-text" value="" name="card-img" placeholder="Ссылка на картинку" required>
         <button type="submit" class="popup__button-save">Создать</button>
         </form>
       </div>
