--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
     <template id="cards-template">
       <li class="cards__item">
+        <button type="button" class="cards__del"></button>
         <img class="cards__image" src="" alt="">
         <div class="cards__rectangle">
           <h2 class="cards__title"></h2>
