feat: image popup

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
         </form>
       </div>
     </div>
+    <div class="popup">
+      <div class="popup__image-form">
+        <form class="popup__img-form" name="img-form">
+          <button type="reset" class="popup__close"></button>
+          <img class="popup__img" src="">
+          <p class="popup__img-name"></p>
+        </form>
+      </div>
+    </div>
     <template id="cards-template">
       <li class="cards__item">
         <button type="button" class="cards__del"></button>
