--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Новое место</h2>
           <input type="text" class="popup__input-text" value="" name="card-name" placeholder="Название" required>
-          <input type="text" class="popup__input-text" value="" name="card-img" placeholder="Ссылка на картинку" required>
+          <input type="url" class="popup__input-text" value="" name="card-img" placeholder="Ссылка на картинку" required>
         <button type="submit" class="popup__button-save">Создать</button>
         </form>
       </div>
     </div>
     <div class="popup">
-      <div class="popup__image-form">
+      <div class="popup__container-image">
         <form class="popup__img-form" name="img-form">
           <button type="reset" class="popup__close"></button>
           <img class="popup__img" src="">
