hotfix: src in image popup

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="popup__container-image">
         <form class="popup__img-form" name="img-form">
           <button type="reset" class="popup__close"></button>
-          <img class="popup__img" src="">
+          <img class="popup__img">
           <p class="popup__img-name"></p>
         </form>
       </div>
