hotfix: src in template

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <template id="cards-template">
       <li class="cards__item">
         <button type="button" class="cards__del"></button>
-        <img class="cards__image" src="" alt="">
+        <img class="cards__image" alt="">
         <div class="cards__rectangle">
           <h2 class="cards__title"></h2>
           <button type="button" class="cards__like"></button>
