hotfix: src and alt in templates

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="popup__container-image">
         <form class="popup__img-form" name="img-form">
           <button type="reset" class="popup__close"></button>
-          <img class="popup__img">
+          <img class="popup__img" src="../" alt="Пустота">
           <p class="popup__img-name"></p>
         </form>
       </div>
@@ -64,7 +64,7 @@
     <template id="cards-template">
       <li class="cards__item">
         <button type="button" class="cards__del"></button>
-        <img class="cards__image" alt="">
+        <img class="cards__image" src="../" alt="Пустота">
         <div class="cards__rectangle">
           <h2 class="cards__title"></h2>
           <button type="button" class="cards__like"></button>
