fix: 5 stage after review

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <form class="popup__form" name="profile-edit-form">
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <input type="text" class="popup__input-text" value="" name="profile-edit-name" required>
-          <input type="text" class="popup__input-text" value="" name="profile-edit-title" required>
+          <input type="text" class="popup__input-text" value="" name="profile-edit-name" placeholder="Введите ваше имя" required>
+          <input type="text" class="popup__input-text" value="" name="profile-edit-title" placeholder="Введите вашу должность" required>
         <button type="submit" class="popup__button-save">Сохранить</button>
         </form>
       </div>
@@ -71,6 +71,7 @@
         </div>
       </li>
     </template>
+    <script src="./scripts/consts.js"></script> 
     <script src="./scripts/script.js"></script> 
 </body>
 </html>
