--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
       </li>
     </template>
     <script src="./scripts/consts.js"></script> 
-    <script src="./scripts/script.js"></script> 
+    <script src="./scripts/index.js"></script> 
 </body>
 </html>
