--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
       <form class="popup__form" name="profile-edit-form">
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <input type="text" class="popup__input-text" value="" name="profile-edit-name" placeholder="Введите ваше имя" required>
-          <input type="text" class="popup__input-text" value="" name="profile-edit-title" placeholder="Введите вашу должность" required>
+          <label class="popup__field">
+            <input type="text" class="popup__input-text" value="" name="profile-edit-name" placeholder="Введите ваше имя" minlength="2" maxlength="40" required>
+            <span class="popup__input-text-error"></span>
+          </label>
+          <label class="popup__field">
+            <input type="text" class="popup__input-text" value="" name="profile-edit-title" placeholder="Введите вашу должность" minlength="2" maxlength="200" required>
+            <span class="popup__input-text-error"></span>
+          </label>
         <button type="submit" class="popup__button-save">Сохранить</button>
         </form>
       </div>
@@ -46,8 +52,14 @@
       <form class="popup__form" name="profile-add-card-form">
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Новое место</h2>
-          <input type="text" class="popup__input-text" value="" name="card-name" placeholder="Название" required>
-          <input type="url" class="popup__input-text" value="" name="card-img" placeholder="Ссылка на картинку" required>
+          <label class="popup__field">
+            <input type="text" class="popup__input-text" value="" name="card-name" placeholder="Название" required>
+            <span class="popup__input-text-error"></span>
+          </label>
+          <label class="popup__field">
+            <input type="url" class="popup__input-text" value="" name="card-img" placeholder="Ссылка на картинку" required>
+            <span class="popup__input-text-error"></span>
+          </label>
         <button type="submit" class="popup__button-save">Создать</button>
         </form>
       </div>
@@ -72,6 +84,7 @@
       </li>
     </template>
     <script src="./scripts/consts.js"></script> 
-    <script src="./scripts/index.js"></script> 
+    <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>  
 </body>
 </html>
