--- a/index.html
+++ b/index.html
@@ -32,34 +32,26 @@
     </footer>
     <div class="popup">
       <div class="popup__container">
-      <form class="popup__form" name="profile-edit-form">
+      <form class="popup__form" name="profile-edit-form" novalidate>
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <label class="popup__field">
-            <input type="text" class="popup__input-text" value="" name="profile-edit-name" placeholder="Введите ваше имя" minlength="2" maxlength="40" required>
-            <span class="popup__input-text-error"></span>
-          </label>
-          <label class="popup__field">
-            <input type="text" class="popup__input-text" value="" name="profile-edit-title" placeholder="Введите вашу должность" minlength="2" maxlength="200" required>
-            <span class="popup__input-text-error"></span>
-          </label>
+            <input type="text" class="popup__input-text" value="" name="profile-edit-name" id="name" placeholder="Введите ваше имя" minlength="2" maxlength="40" required>
+            <span class="popup__input-text-error" id="name-error"></span>
+            <input type="text" class="popup__input-text" value="" name="profile-edit-title" id="title" placeholder="Введите вашу должность" minlength="2" maxlength="200" required>
+            <span class="popup__input-text-error" id="title-error"></span>
         <button type="submit" class="popup__button-save">Сохранить</button>
         </form>
       </div>
     </div>
     <div class="popup">
       <div class="popup__container">
-      <form class="popup__form" name="profile-add-card-form">
+      <form class="popup__form" name="profile-add-card-form" novalidate>
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Новое место</h2>
-          <label class="popup__field">
-            <input type="text" class="popup__input-text" value="" name="card-name" placeholder="Название" required>
-            <span class="popup__input-text-error"></span>
-          </label>
-          <label class="popup__field">
-            <input type="url" class="popup__input-text" value="" name="card-img" placeholder="Ссылка на картинку" required>
-            <span class="popup__input-text-error"></span>
-          </label>
+            <input type="text" class="popup__input-text" value="" name="card-name" id="card-name" placeholder="Название" required>
+            <span class="popup__input-text-error" id="card-name-error"></span>
+            <input type="url" class="popup__input-text" value="" name="card-img" id="card-img" placeholder="Ссылка на картинку" required>
+            <span class="popup__input-text-error" id="card-img-error"></span>
         <button type="submit" class="popup__button-save">Создать</button>
         </form>
       </div>
