feat: validation js full

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <form class="popup__form" name="profile-add-card-form" novalidate>
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Новое место</h2>
-            <input type="text" class="popup__input-text" value="" name="card-name" id="card-name" placeholder="Название" required>
+            <input type="text" class="popup__input-text" value="" name="card-name" id="card-name" placeholder="Название" minlength="2" maxlength="30" required>
             <span class="popup__input-text-error" id="card-name-error"></span>
             <input type="url" class="popup__input-text" value="" name="card-img" id="card-img" placeholder="Ссылка на картинку" required>
             <span class="popup__input-text-error" id="card-img-error"></span>
