feat: class module

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/consts.js"></script> 
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
     <script src="./scripts/validate.js"></script>  
 </body>
 </html>
