--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </footer>
     <div class="popup">
       <div class="popup__container">
-      <form class="popup__form" name="profile-edit-form" novalidate>
+      <form class="popup__form popup__form_edit" name="profile-edit-form" novalidate>
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
             <input type="text" class="popup__input-text" value="" name="profile-edit-name" id="name" placeholder="Введите ваше имя" minlength="2" maxlength="40" required>
@@ -45,7 +45,7 @@
     </div>
     <div class="popup">
       <div class="popup__container">
-      <form class="popup__form" name="profile-add-card-form" novalidate>
+      <form class="popup__form popup__form_add" name="profile-add-card-form" novalidate>
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Новое место</h2>
             <input type="text" class="popup__input-text" value="" name="card-name" id="card-name" placeholder="Название" minlength="2" maxlength="30" required>
