--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <form class="popup__form popup__form_edit" name="profile-edit-form" novalidate>
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-            <input type="text" class="popup__input-text" value="" name="profile-edit-name" id="name" placeholder="Введите ваше имя" minlength="2" maxlength="40" required>
+            <input type="text" class="popup__input-text" value="" name="name" id="name" placeholder="Введите ваше имя" minlength="2" maxlength="40" required>
             <span class="popup__input-text-error" id="name-error"></span>
-            <input type="text" class="popup__input-text" value="" name="profile-edit-title" id="title" placeholder="Введите вашу должность" minlength="2" maxlength="200" required>
+            <input type="text" class="popup__input-text" value="" name="title" id="title" placeholder="Введите вашу должность" minlength="2" maxlength="200" required>
             <span class="popup__input-text-error" id="title-error"></span>
         <button type="submit" class="popup__button-save">Сохранить</button>
         </form>
@@ -48,9 +48,9 @@
       <form class="popup__form popup__form_add" name="profile-add-card-form" novalidate>
         <button type="reset" class="popup__close"></button>
           <h2 class="popup__title">Новое место</h2>
-            <input type="text" class="popup__input-text" value="" name="card-name" id="card-name" placeholder="Название" minlength="2" maxlength="30" required>
+            <input type="text" class="popup__input-text" value="" name="name" id="card-name" placeholder="Название" minlength="2" maxlength="30" required>
             <span class="popup__input-text-error" id="card-name-error"></span>
-            <input type="url" class="popup__input-text" value="" name="card-img" id="card-img" placeholder="Ссылка на картинку" required>
+            <input type="url" class="popup__input-text" value="" name="link" id="card-img" placeholder="Ссылка на картинку" required>
             <span class="popup__input-text-error" id="card-img-error"></span>
         <button type="submit" class="popup__button-save">Создать</button>
         </form>
