--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Место</title>
-    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="main">
     <header class="header">
-        <img class="header__logo" src="./images/header-logo.svg" alt="Логотип проекта Место">
+        <img class="header__logo" src="<%=require('./images/header-logo.svg')%>" alt="Логотип проекта Место">
     </header> 
     <main class="content">
         <section class="profile">
-            <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар страницы">
+            <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватар страницы">
             <div class="profile-info">
                 <div class="profile-info__row">
                   <h1 class="profile-info__name">Жак-Ив Кусто</h1>
@@ -75,6 +74,5 @@
         </div>
       </li>
     </template>
-    <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
